Docs: Add swagger documentation to CarController@index and cars model Schema
